--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "chat",
+  "name": "chat-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": "Pranjalya Tiwari",
+  "email": "pranjalyawarrior@gmail.com",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
@@ -12,7 +14,8 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "websocket-extensions": ">=0.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
