--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1",
-    "websocket-extensions": ">=0.1.4"
+    "websocket-extensions": ">=0.1.4",
+    "minimist": ">=1.2.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
