--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1",
     "websocket-extensions": ">=0.1.4",
-    "minimist": ">=1.2.3"
+    "minimist": ">=1.2.3",
+    "kind-of": ">=6.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
