--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pouchdb": "^7.1.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-material": "^1.0.0-beta-14",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
@@ -18,7 +19,7 @@
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-pwa": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   }
